# agentic-enterprise-rag-langgraph

./: .env.example  .gitignore  .pyre_configuration  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
backend/: .pyre_configuration  Dockerfile  pyproject.toml  pytest_output.txt  pytest_output_utf8.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agent/: graph.py  nodes.py  state.py  tools.py
backend/app/analytics/: __init__.py  service.py
backend/app/api/: routes_analytics.py  routes_health.py  routes_metrics.py  routes_mode.py  routes_query.py  routes_upload.py
backend/app/core/: __init__.py  citations.py  document_processor.py  language_detect.py  llm_provider.py  rag_pipeline.py  vector_store.py
backend/app/gdpr/: __init__.py  anonymizer.py
backend/app/integrations/: __init__.py  slack_bot.py  teams_bot.py
backend/app/tracking/: __init__.py  cost_tracker.py
backend/evaluation/: evaluate.py  test_dataset.json
backend/tests/: test_agent.py  test_agent_citations.py  test_analytics_integration.py  test_analytics_service.py  test_anonymizer.py  test_api.py  test_cost_tracker.py  test_rag_pipeline.py
docs/: README.md  api-reference.md  deployment.md  evaluation.md  setup-cloud.md  setup-local.md  testing.md
frontend/: index.html  lint.txt  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.test.tsx  ChatMessage.tsx  CostDashboard.tsx  Dashboard.test.tsx  (+8 more)
(+5 files in other folders)
